--- a/package.json
+++ b/package.json
@@ -1,74 +1,87 @@
 {
-    "name": "visualclojure",
-    "displayName": "visual:clojure",
-    "description": "Clojure and ClojureScript support",
-    "icon": "assets/icon.png",
-    "version": "0.0.2",
-    "publisher": "stiansivertsen",
-    "author": {
-        "name": "Stian Sivertsen",
-        "email": "sivertsenstian@gmail.com"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/sivertsenstian/visualclojure.git"
-
-    },
-    "engines": {
-        "vscode": "^0.10.0"
-    },
-    "categories": [
-        "Languages",
-        "Snippets",
-        "Other"
+  "name": "visualclojure",
+  "displayName": "visual:clojure",
+  "description": "Clojure and ClojureScript support",
+  "icon": "assets/icon.png",
+  "version": "0.0.2",
+  "publisher": "stiansivertsen",
+  "author": {
+    "name": "Stian Sivertsen",
+    "email": "sivertsenstian@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sivertsenstian/visualclojure.git"
+  },
+  "engines": {
+    "vscode": "^0.10.0"
+  },
+  "categories": [
+    "Languages",
+    "Snippets",
+    "Other"
+  ],
+  "activationEvents": [
+    "onLanguage:clojure"
+  ],
+  "main": "./src/extension",
+  "contributes": {
+    "commands": [
+      {
+        "command": "visualclojure.connect",
+        "title": "VisualClojure: Connect to an existing nREPL session"
+      },
+      {
+        "command": "visualclojure.evaluateExpression",
+        "title": "VisualClojure: Evaluate selected expression"
+      },
+      {
+        "command": "visualclojure.evaluateFile",
+        "title": "VisualClojure: Evaluate current file"
+      },
+      {
+        "command": "visualclojure.toggleSession",
+        "title": "VisualClojure: Toggle between clj clj/cljs session"
+      }
     ],
-    "activationEvents": [
-        "onLanguage:clojure"
+    "snippets": [
+      {
+        "language": "clojure",
+        "path": "./snippets/clojure.json"
+      }
     ],
-    "main": "./src/extension",
-    "contributes": {
-        "commands": [{
-                        "command": "visualclojure.connect",
-                        "title": "VisualClojure: Connect to an existing nREPL session"
-                    }, 
-                    {
-                        "command": "visualclojure.evaluateExpression",
-                        "title": "VisualClojure: Evaluate selected expression"
-                    },
-                    {
-                        "command": "visualclojure.evaluateFile",
-                        "title": "VisualClojure: Evaluate current file"
-                    }],
-        "snippets": [{
-                        "language": "clojure",
-                        "path": "./snippets/clojure.json"
-                    }],
-        "keybindings": [{
-                            "command": "visualclojure.connect",
-                            "key": "alt+c",
-                            "mac": "alt+c"
-                        },
-                        {
-                            "command": "visualclojure.evaluateExpression",
-                            "key": "alt+Enter",
-                            "mac": "alt+Enter"
-                        },
-                        {
-                            "command": "visualclojure.evaluateFile",
-                            "key": "alt+f5",
-                            "mac": "alt+f5"
-                        }]
-    },
-    "scripts": {
-        "postinstall": "node ./node_modules/vscode/bin/install"
-    },
-    "dependencies": {
-        "vscode": "^1.0.0",
-        "bencoder": "^0.0.5",
-        "buffer": "^5.0.2",
-        "net": "^1.0.2",
-        "stream": "^0.0.2",
-        "util": "^0.10.3",
-        "jszip": "^3.1.3"
-    }
+    "keybindings": [
+      {
+        "command": "visualclojure.connect",
+        "key": "alt+c",
+        "mac": "alt+c"
+      },
+      {
+        "command": "visualclojure.evaluateExpression",
+        "key": "alt+Enter",
+        "mac": "alt+Enter"
+      },
+      {
+        "command": "visualclojure.evaluateFile",
+        "key": "alt+f5",
+        "mac": "alt+f5"
+      }
+    ]
+  },
+  "scripts": {
+    "postinstall": "node ./node_modules/vscode/bin/install"
+  },
+  "dependencies": {
+    "@types/node": "~6.0.73",
+    "bencoder": "^0.0.5",
+    "buffer": "^5.0.2",
+    "find": "^0.2.7",
+    "jszip": "^3.1.3",
+    "lodash": "^4.17.4",
+    "net": "^1.0.2",
+    "stream": "^0.0.2",
+    "typescript": "^2.3.2",
+    "util": "^0.10.3",
+    "vscode": "^1.1.0"
+  }
 }
